<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="capstone_my_own_app">Capstone: my own app</string>
    <string name="xyz_reader">xyz reader</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="library_app">Library app</string>
    <string name="scores_app">Scores app</string>
    <string name="this_button_will_launch_my">"This button will launch my "</string>
</resources>
