<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_nanodegree_apps"
            android:padding="8dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <Button
            android:id="@+id/spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            style="?attr/myButton"/>

        <Button
            android:id="@+id/scores_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            style="?attr/myButton"/>

        <Button
            android:id="@+id/library_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            style="?attr/myButton"/>

        <Button
            android:id="@+id/build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            style="?attr/myButton"/>

        <Button
            android:id="@+id/xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            style="?attr/myButton"/>

        <Button
            android:id="@+id/my_own_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone_my_own_app"
            style="?attr/myButtonAccent"/>
    </LinearLayout>
</ScrollView>
